--- a/web4jsp/src/main/webapp/WEB-INF/web.xml
+++ b/web4jsp/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
-    <display-name>web2</display-name>
+    <display-name>web4jsp</display-name>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.jsp</welcome-file>
@@ -10,9 +10,18 @@
         <welcome-file>default.htm</welcome-file>
     </welcome-file-list>
 
-    <!-- servlet 파일 요청 매핑-->
-
-    <!-- 현재 프로젝트 전체에 대해 세션 유지 시간을 설정-->
-
+    <!-- 에러 관련 요소 -->
+    <!--<error-page>
+        <error-code>500</error-code>
+        <location>/err1.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/err2.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>java.lang.FileNotFoundException</error-code>
+        <location>/err3.jsp</location>
+    </error-page>-->
 
 </web-app>
