--- a/.gitignore
+++ b/.gitignore
@@ -142,19 +142,19 @@ hs_err_pid*
 replay_pid*
 
 ### Web ###
-*.asp
-*.cer
-*.csr
-*.css
-*.htm
-*.html
-*.js
-*.jsp
-*.php
-*.rss
-*.wasm
-*.wat
-*.xhtml
+#*.asp
+#*.cer
+#*.csr
+#*.css
+#*.htm
+#*.html
+#*.js
+#*.jsp
+#*.php
+#*.rss
+#*.wasm
+#*.wat
+#*.xhtml
 
 ### Windows ###
 # Windows thumbnail cache files
